--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,6 @@ plugins {
 
 android {
     compileSdk 31
-
     defaultConfig {
         applicationId "com.example.myplayer"
         minSdk 28
@@ -35,6 +34,9 @@ android {
     buildFeatures {
         dataBinding true
     }
+    packagingOptions {
+        exclude 'META-INF/DEPENDENCIES'
+    }
 }
 
 dependencies {
@@ -42,7 +44,6 @@ dependencies {
     implementation "androidx.core:core-ktx:1.6.0"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.0"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.0"
-
     // App compat and UI things.
     implementation "androidx.appcompat:appcompat:1.3.1"
     implementation "androidx.constraintlayout:constraintlayout:2.0.4"
@@ -60,6 +61,9 @@ dependencies {
     // Room library.
     implementation "androidx.room:room-runtime:2.3.0"
     implementation "androidx.room:room-ktx:2.3.0"
+    implementation files('libs/httpclient-4.5.5.jar')
+    implementation files('libs/aliyun-java-sdk-core-4.5.16.jar')
+    implementation files('libs/aliyun-java-sdk-dysmsapi-1.0.0.jar')
     kapt "androidx.room:room-compiler:2.3.0"
 
     // WorkManager library.
@@ -93,5 +97,5 @@ dependencies {
     androidTestImplementation "androidx.test.ext:junit:$rootProject.extVersion"
     androidTestImplementation "androidx.test.espresso:espresso-core:$rootProject.espressoVersion"
     implementation 'org.java-websocket:Java-WebSocket:1.4.0'
-
+    //implementation "com.aliyun:aliyun-java-sdk-core:4.5.1 "
 }
