--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,11 +10,13 @@ android {
     compileSdk 31
     defaultConfig {
         applicationId "com.example.myplayer"
-        minSdk 28
+        minSdk 21
         targetSdk 31
         versionCode 1
         versionName "1.0"
-
+        ndk {
+            abiFilters "armeabi-v7a", "x86","arm64-v8a","x86_64"
+        }
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -37,15 +39,39 @@ android {
     packagingOptions {
         exclude 'META-INF/DEPENDENCIES'
     }
+    sourceSets {
+        main {
+            jniLibs.srcDir 'libs'
+        }
+    }
+    android {
+        useLibrary 'org.apache.http.legacy'
+    }
 }
 
 dependencies {
+    implementation 'com.netease.nimlib:basesdk:8.9.0'
+
+    // 聊天室需要
+    implementation 'com.netease.nimlib:chatroom:8.9.0'
+
+    implementation 'com.netease.nimlib:avchat:8.9.0'
+
+    // 通过云信来集成小米等厂商推送需要
+    implementation 'com.netease.nimlib:push:8.9.0'
+
+    // 超大群需要
+    implementation 'com.netease.nimlib:superteam:8.9.0'
+
+
+    // 全文检索插件
+    implementation 'com.netease.nimlib:lucene:8.9.0'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "androidx.core:core-ktx:1.6.0"
+    implementation "androidx.core:core-ktx:1.5.0"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.0"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.0"
     // App compat and UI things.
-    implementation "androidx.appcompat:appcompat:1.3.1"
+    implementation "androidx.appcompat:appcompat:1.3.0"
     implementation "androidx.constraintlayout:constraintlayout:2.0.4"
     implementation "androidx.fragment:fragment-ktx:1.3.6"
     implementation "androidx.viewpager2:viewpager2:1.0.0"
@@ -64,6 +90,7 @@ dependencies {
     implementation files('libs/httpclient-4.5.5.jar')
     implementation files('libs/aliyun-java-sdk-core-4.5.16.jar')
     implementation files('libs/aliyun-java-sdk-dysmsapi-1.0.0.jar')
+    implementation files('libs/BaiduLBS_Android.jar')
     kapt "androidx.room:room-compiler:2.3.0"
 
     // WorkManager library.
@@ -98,4 +125,8 @@ dependencies {
     androidTestImplementation "androidx.test.espresso:espresso-core:$rootProject.espressoVersion"
     implementation 'org.java-websocket:Java-WebSocket:1.4.0'
     //implementation "com.aliyun:aliyun-java-sdk-core:4.5.1 "
+
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.3.72"
+    implementation 'androidx.annotation:annotation:1.2.0'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
 }
