--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.myplayer">
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
@@ -8,8 +11,35 @@
     <uses-permission android:name="android.permission.RECEIVE_SMS"></uses-permission>
     <uses-permission android:name="android.permission.READ_SMS"/>
     <uses-permission android:name="android.permission.SEND_SMS"/>
+    <!-- 这个权限用于进行网络定位 -->
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <!-- 这个权限用于访问GPS定位 -->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
+
+
+    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"
+        tools:ignore="ProtectedPermissions" />
+
+
+
+    <!-- 这个权限用于进行网络定位-->
+    <!-- 这个权限用于访问GPS定位-->
+    <!-- 用于访问wifi网络信息，wifi信息会用于进行网络定位-->
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"></uses-permission>
+    <!-- 获取运营商信息，用于支持提供运营商信息相关的接口-->
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"></uses-permission>
+    <!-- 这个权限用于获取wifi的获取权限，wifi信息会用来进行网络定位-->
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE"></uses-permission>
+
+    <permission
+        android:name="com.example.myplayer.permission.RECEIVE_MSG"
+        android:protectionLevel="signature"/>
+
+    <uses-permission android:name="com.example.myplayer.permission.RECEIVE_MSG"/>
 
     <application
+        xmlns:tools="http://schemas.android.com/tools"
         android:usesCleartextTraffic="true"
         android:name=".MainApplication"
         android:allowBackup="true"
@@ -18,9 +48,13 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+
         android:networkSecurityConfig="@xml/network_security_config"
 
         android:theme="@style/Theme.MyPlayer">
+        <meta-data
+            android:name="com.baidu.lbsapi.API_KEY"
+            android:value="oBHbUHuRrogKAsrFUX2lWBz0eyZNZMVe" />
         <uses-library android:name="org.apache.http.legacy" android:required="false"/>
         <activity
             android:name=".LoginActivity"
@@ -43,6 +77,59 @@
             android:theme="@style/NoActionBar"
             android:exported="true">
         </activity>
+        <service android:name="com.baidu.location.f"
+            android:enabled="true"
+            android:process=":remote"/>
+
+        <service
+            android:name="com.netease.nimlib.service.NimService"
+            android:process=":core"/>
+        <service
+            android:name="com.netease.nimlib.service.NimService$Aux"
+            android:process=":core"/>
+
+        <!-- 云信后台辅助服务 -->
+        <service
+            android:name="com.netease.nimlib.job.NIMJobService"
+            android:exported="true"
+            android:permission="android.permission.BIND_JOB_SERVICE"
+            android:process=":core"/>
+
+        <receiver android:name="com.netease.nimlib.service.NimReceiver"
+            android:process=":core"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED"/>
+                <action android:name="android.net.conn.CONNECTIVITY_CHANGE"/>
+            </intent-filter>
+        </receiver>
+
+        <!-- 云信进程间通信 Receiver -->
+        <receiver android:name="com.netease.nimlib.service.ResponseReceiver"/>
+
+        <!-- 云信进程间通信service -->
+        <service android:name="com.netease.nimlib.service.ResponseService"/>
+
+        <provider
+            android:name="com.netease.nimlib.ipc.NIMContentProvider"
+            android:authorities="com.example.myplayer.ipc.provider"
+            android:exported="false"
+            android:process=":core" />
+
+        <!-- 云信内部使用的进程间通信provider -->
+        <!-- SDK启动时会强制检测该组件的声明是否配置正确，如果检测到该声明不正确，SDK会主动抛出异常引发崩溃 -->
+        <provider
+            android:name="com.netease.nimlib.ipc.cp.provider.PreferenceContentProvider"
+            android:authorities="com.example.myplayer.ipc.provider.preference"
+            android:exported="false" />
+
+
+        <meta-data
+            android:name="com.netease.nim.appKey"
+            android:value="37e03c9b288eff731388d655b2284f0e" />
+
+
+
     </application>
 
 </manifest>
