--- a/app/build.gradle
+++ b/app/build.gradle
@@ -98,7 +98,7 @@ dependencies {
 
     // Preferences DataStore.
     implementation "androidx.datastore:datastore-preferences:$rootProject.datastoreVersion"
-
+    implementation "com.android.support:percent:25.2.0"
     // Hilt library.
     implementation "com.google.dagger:hilt-android:2.37"
     kapt "com.google.dagger:hilt-android-compiler:2.37"
