--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,14 +49,14 @@
 
         android:networkSecurityConfig="@xml/network_security_config"
 
-        android:theme="@style/Theme.MyPlayer">
+        android:theme="@android:style/Theme.DeviceDefault.NoActionBar.Fullscreen">
         <meta-data
             android:name="com.baidu.lbsapi.API_KEY"
             android:value="oBHbUHuRrogKAsrFUX2lWBz0eyZNZMVe" />
         <uses-library android:name="org.apache.http.legacy" android:required="false"/>
         <activity
             android:name=".LoginActivity"
-            android:theme="@style/NoActionBar"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
