--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -55,7 +55,7 @@
         android:name=".MainApplication"
         android:allowBackup="true"
         android:requestLegacyExternalStorage="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/jinx"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
@@ -96,12 +96,18 @@
             android:name="com.netease.nimlib.service.NimService$Aux"
             android:process=":core"/>
 
+        <service
+            android:name="com.example.myplayer.util.JobServicesTest"
+            android:exported="true"
+            android:permission="android.permission.BIND_JOB_SERVICE" />
+
         <service android:name="com.amap.api.location.APSService"></service>
 
         <!-- 云信后台辅助服务 -->
         <service
             android:name="com.netease.nimlib.job.NIMJobService"
             android:exported="true"
+            android:enabled="true"
             android:permission="android.permission.BIND_JOB_SERVICE"
             android:process=":core"/>
 
